--- a/ComunidadSostenible/css/main.css
+++ b/ComunidadSostenible/css/main.css
@@ -84,7 +84,35 @@ h3{
 	width: 100%;
 	height: 300px;
 }
-.inconofooter{
-	width: 20%;
-	height: 20%;
+.mbottom{
+	margin-bottom: 20px;
+}
+.mtop{
+	margin-top: 20px;
+}
+.caja{
+	width: 300px;
+	height: auto;
+	border-color: white;
+	border-style: solid;
+	border-width: 1px;
+	padding: 5px;
+}
+.cajaicono{
+	width: 70px;
+	height: 70px;
+	padding: 2px;
+	margin-top: 80px;
+	float: right;
+}
+.iconofooter{
+	width: 60%;
+	height: 60%;
+}
+#mail{
+	width: 40%;
+	height: 40%;
+	float: right;
+	margin-top: 10px;
+	margin-right: 30px;
 }
